objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAS_Call_Recordings__c</fullName>
        <description>Links to recordings for connect and sell calls</description>
        <label>CAS Call Recordings</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>SAM Integration Best Action Completion Date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Request_Details__c</fullName>
        <description>Provide SPECIFIC details of this request, including overarching category for your brand.</description>
        <label>Data Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please be specific with this request.  We need to know exactly what you&apos;re looking for.  MUST align with a category, not just a specific brand.</description>
        <label>Data Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_in_Hours__c</fullName>
        <description>Used by SEs to record time (in Hours) spent on an activity.</description>
        <inlineHelpText>Used by SEs to record time (in Hours) spent on an activity.</inlineHelpText>
        <label>Duration (in Hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_or_Internal__c</fullName>
        <description>Used by Solution Engineers to track if time is spent externally (client facing) or internally.  Defaults to External.</description>
        <inlineHelpText>Used by Solution Engineers to track if time is spent externally (client facing) or internally.  Defaults to External.</inlineHelpText>
        <label>External or Internal (SEs)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                    <default>true</default>
                    <label>External</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_From_Meeting__c</fullName>
        <label>Follow Up From Meeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Depot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Depot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kohl_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kohl&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Date_Time__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>Meeting Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Presentation__c</fullName>
        <label>Meeting Presentation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meijer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meijer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mock_Up_Details__c</fullName>
        <label>Mock-Up Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mock_Up_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Standard mocks for meeting, this does not include larger strategic presentation for vertical</description>
        <label>Mock-Ups ONLY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mock_up_Due_Date__c</fullName>
        <description>Mock-up Due Date</description>
        <inlineHelpText>Mock-up Due Date</inlineHelpText>
        <label>Mock-up Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_ActivityId__c</fullName>
        <label>Previous ActivityId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDocumentID__c</fullName>
        <label>Quote Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDocument__c</fullName>
        <description>Quote document that was sent from opportunity.</description>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; &amp; QuoteDocumentID__c, QuoteName__c)</formula>
        <inlineHelpText>Quote document that was sent from opportunity.</inlineHelpText>
        <label>Quote Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteName__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Details__c</fullName>
        <inlineHelpText>Please be as explicit as possible with what you would like us to provide.</inlineHelpText>
        <label>RFI Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Due_Date__c</fullName>
        <label>RFI Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <label>Referred by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Referral__c</fullName>
        <label>Retailer Referral</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sears</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>The Home Depot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_Activity_Type__c</fullName>
        <description>Used by SE&apos;s only to select the Activity Type they are logging hours against.  Not shown for other roles.</description>
        <inlineHelpText>Used by Solution Engineers only to select the Activity Type they are logging hours against.  Not shown for other roles.  This field is required for SEs only.</inlineHelpText>
        <label>SE Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Internal preparation</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Customer Presentation</fullName>
                </value>
                <value>
                    <fullName>Technical Follow Up</fullName>
                </value>
                <value>
                    <fullName>Solution Draft</fullName>
                </value>
                <value>
                    <fullName>RFP / RFI</fullName>
                </value>
                <value>
                    <fullName>Mockup / Business Proposal</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Handoff</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sears__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sears</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Assignment__c</fullName>
        <label>Task Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting - Nothing Need From AdOps</fullName>
                </value>
                <value>
                    <fullName>Data Request</fullName>
                </value>
                <value>
                    <fullName>RFI Request</fullName>
                </value>
                <value>
                    <fullName>Mock-Up Request</fullName>
                </value>
                <value>
                    <fullName>Strategic Presentation Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Walmart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walmart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rr_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>{rr} Network</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>